--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.94.0",
+    "chart.js": "^4.5.1"
   }
 }
