--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.94.0",
     "chart.js": "^4.5.1"
   }
